# ducklink-extension

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  STABILITY.md  build.rs  description.yml
.github/workflows/: crossplatform-dryrun.yml
assets/: catalog-snapshot.json
benches/: docs_section.rs  parallel_scalar.rs  scalar_dispatch.rs  scalar_query.rs
conformance/: README.md
conformance/expected/: 01-entry-points-registered.out  02-discovery-views-shape.out
conformance/scripts/: 01-entry-points-registered.sql  02-discovery-views-shape.sql
cpp/: ducklink_advanced.cpp  ducklink_advanced.h  ducklink_alias.cpp  ducklink_optimizer.cpp  ducklink_parser.cpp  ducklink_table_stream.cpp
docs/: catalog-authoring.md  community-native-audit.md  dual-build-native-and-wasm.md  duckdb-rs-connection-raw-handle-proposal.md  duckdb-scalar-is-window-issue.md  duckdb-upstream-custom-trusted-keys-prototype.md  duckdb-upstream-custom-trusted-keys.md  duckdb-upstream-function-autoload.md  extension-scope.md  gap-2-residual-status.md  guest-simd-investigation.md  how-to-file-iswindow-upstream.md  load-model.md  native-advanced-dispatch.md  native-hosting-plan.md  perf-ceiling-measurement.md  prefix-model-decision.md  vegalite-plan.md  visualize-design.md  wit-shared-memory-result.md  wit-streaming-scalar-dispatch.md
pylib/: pylon_endpoint.py
runtime/: Cargo.toml  build.rs
runtime/src/: compose_dynlink.rs  extension.rs  lib.rs
runtime/tests/: runtime_units.rs
runtime/wit/: deps.toml  duckdb-extension-host.wit
runtime/wit-canonical/duckdb-extension/: arrow-ext.wit  callback-dispatch.wit  catalog.wit  config.wit  files.wit  guest.wit  index-dispatch.wit  index-host.wit  log-storage-dispatch.wit  log-storage.wit  optimizer-dispatch.wit  parser-dispatch.wit  parser.wit  runtime.wit  storage.wit  table-stream-dispatch.wit
runtime/wit-canonical/duckdb-extension/worlds/: duckdb-extension.wit
src/: advanced.rs  arrow_encoder.rs  catalog.rs  delegating_agg.rs  docs_section.rs  engine.rs  events.rs  lib.rs  passthrough.rs  pydeps.rs  pytier.rs  reg_duckdb.rs  resolver.rs  url_fetch.rs
test/advanced/: smoke.sh
test/pytier/: dep_ext.py  dep_ext_nodecl.py  url_ext.py  verify_inline_deps_and_url.sh
test/sql/: ducklink.test
tests/: bridge_coverage.rs  conformance.rs  live_catalog_smoke.rs  live_community_alias_smoke.rs  scenario1_corpus.rs
tests/fixtures/: aba.wasm
tooling/: ducklink-install.sh  gen-shim.sh  native-conformance.sh  verify-d.sh
