# The `ducklink` DuckDB community extension (Direction 2): a native-DuckDB
# loadable extension that embeds wasmtime to run `duckdb:extension` WebAssembly
# components. Standalone repo derived from the ducklink workspace
# (https://github.com/tegmentum/ducklink); the shared engine is consumed as a
# git dependency so this repo builds on its own under the community-extensions CI.
[package]
name = "ducklink-extension"
version = "0.5.2"
edition = "2021"
license = "MIT"
description = "Run WebAssembly component extensions inside DuckDB"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
name = "ducklink"

[features]
# The community-extensions CI runs a plain `cargo build --release` (no
# --features), so the loadable .duckdb_extension build must be the default.
default = ["loadable"]
# Code that talks to the duckdb crate: the Direction-2 registration + dispatch
# bridge (reg_duckdb.rs).
duckdb-api = ["dep:duckdb", "duckdb/vscalar"]
# Build the loadable .duckdb_extension (links the DuckDB C Extension API,
# resolved by the loading process). The deployable artifact.
loadable = [
    "duckdb-api",
    "duckdb/loadable-extension",
    "dep:libduckdb-sys",
    "libduckdb-sys/loadable-extension",
]
# Compile an in-process DuckDB from source, for the end-to-end Rust tests.
bundled = ["duckdb-api", "duckdb/bundled"]
# The ADVANCED native dispatch tier (parser / optimizer / table FILTER
# pushdown). It binds DuckDB's INTERNAL C++ ABI through a C++ shim compiled by
# build.rs (pulls the `cc` build-dependency) and is therefore OPT-IN and OFF by
# default: the community-extensions CI runs a plain `cargo build --release`
# (default features only), so it gets the COMMON tier with a trivial no-op build
# script — guaranteed-portable across every platform (this is why v0.4.0, which
# had no build.rs, built green everywhere). Our own native distribution builds
# `--features loadable,advanced` to ship the full tier. The shim has no portable
# Windows PE/COFF equivalent, so it is compiled out on Windows regardless (see
# build.rs).
advanced = ["dep:cc", "duckdb-api"]

[dependencies]
# The shared engine: the duckdb:extension bindgen, the neutral reg::* capture
# model, the callback registry, and the load_component loader. Consumed from the
# public ducklink monorepo so this extension loads components identically to the
# Direction-1 host.
ducklink-runtime = { path = "runtime" }
# wasmtime to run the component. MUST match ducklink-runtime's pinned version so
# the WasiCtx / generated bindings are the same types across the crate boundary.
wasmtime = { version = "46.0.1", features = ["component-model"] }
wasmtime-wasi = "46.0.1"
anyhow = "1"
# Parse the neutral plan-shape JSON the optimizer C++ shim flattens, into the
# node tuples the component optimizer-dispatch consumes (advanced tier).
serde_json = "1"

# DuckDB C Extension API (loadable-extension build). Pinned to the DuckDB version
# the community-extensions CI builds against (v1.5.4); bumped per release.
duckdb = { version = "1.10504.0", optional = true, default-features = false }
libduckdb-sys = { version = "1.10504.0", features = ["loadable-extension"], optional = true }

[build-dependencies]
# Compiles the advanced-tier C++ shim (cpp/ducklink_*.cpp) against DuckDB's
# INTERNAL headers and links it into the loadable extension. Headers are taken
# from the version-locked libduckdb-sys bundled source (v1.5.4). See build.rs.
# OPTIONAL and gated behind the `advanced` feature so the DEFAULT (community)
# build does not pull `cc` into the build script at all — the build-script-build
# binary then links exactly like the trivial runtime one (which builds green in
# the community macOS CI), instead of the cc-linked one that fails to exec there.
cc = { version = "1", optional = true }

[dev-dependencies]
criterion = "0.5"
# For constructing reg::DuckValue chunks in the dispatch benchmark (benches are
# separate compilation units, so the engine's runtime dep must be a dev-dep too).
ducklink-runtime = { path = "runtime" }

# Micro-benchmark of the Direction-2 scalar dispatch hot path (Engine2 only --
# no DuckDB, so it builds with --no-default-features). Run:
#   cargo bench --no-default-features --bench scalar_dispatch
[[bench]]
name = "scalar_dispatch"
harness = false

# End-to-end scalar throughput through a real in-process DuckDB (needs `bundled`).
# Captures the per-chunk marshalling build that scalar_dispatch can't see. Run:
#   cargo bench --no-default-features --features bundled --bench scalar_query
[[bench]]
name = "scalar_query"
harness = false

[profile.release]
lto = true
strip = true

# Standalone repo — detached from any parent workspace.
[workspace]
