# The `ducklink` DuckDB community extension (Direction 2): a native-DuckDB
# loadable extension that embeds wasmtime to run `duckdb:extension` WebAssembly
# components. Standalone repo derived from the ducklink workspace
# (https://github.com/tegmentum/ducklink); the shared engine is consumed as a
# git dependency so this repo builds on its own under the community-extensions CI.
[package]
name = "ducklink-extension"
version = "5.0.0"
edition = "2021"
rust-version = "1.94"
license = "MIT"
description = "Run WebAssembly component extensions inside DuckDB"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
name = "ducklink"

[features]
# The community-extensions CI runs a plain `cargo build --release` (no
# --features), so the loadable .duckdb_extension build must be the default.
# `network` pulls in reqwest + rustls + sha2 for HTTPS catalog fetch and
# blob download-and-verify; without it, the extension serves only the
# bundled snapshot and refuses to download uncached blobs (~5-8 MB smaller
# binary, for air-gapped / minimal-distribution use).
default = ["loadable", "network"]
# Code that talks to the duckdb crate: the registration + dispatch bridge
# (reg_duckdb.rs).
duckdb-api = ["dep:duckdb", "duckdb/vscalar"]
# Build the loadable .duckdb_extension (links the DuckDB C Extension API,
# resolved by the loading process). The deployable artifact.
loadable = [
    "duckdb-api",
    "duckdb/loadable-extension",
    "dep:libduckdb-sys",
    "libduckdb-sys/loadable-extension",
]
# Compile an in-process DuckDB from source, for the end-to-end Rust tests.
bundled = ["duckdb-api", "duckdb/bundled"]
# HTTPS catalog fetch + on-demand blob download. Pulls in reqwest + rustls +
# webpki-roots + sha2. Enabled by default; disable for air-gapped or
# minimum-binary-size builds. Without `network`, ducklink resolves only
# names in the bundled snapshot AND refuses to load anything not already in
# the on-disk cache.
network = ["dep:reqwest", "dep:sha2"]

[dependencies]
# The shared engine: the duckdb:extension bindgen, the neutral reg::* capture
# model, the callback registry, and the load_component loader. Consumed from the
# public ducklink monorepo so this extension loads components identically to the
# Direction-1 host.
ducklink-runtime = { path = "runtime" }
# wasmtime to run the component. MUST match ducklink-runtime's pinned version so
# the WasiCtx / generated bindings are the same types across the crate boundary.
wasmtime = { version = "47.0.2", features = ["component-model"] }
wasmtime-wasi = "47.0.2"
anyhow = "1"
# Parses the published ducklink catalog (catalog.json / the bundled snapshot)
# for name->blob resolution in `ducklink_load`.
serde_json = "1"
serde = { version = "1", features = ["derive"] }
# Fetch the published catalog + component blobs at runtime for `ducklink_load`
# by catalog NAME. Mirrors the host crate: blocking, rustls + bundled webpki
# roots (no system TLS), http2. Network failures fall back to the bundled
# snapshot, so this is best-effort.
reqwest = { version = "0.13", default-features = false, features = ["blocking", "rustls", "webpki-roots", "http2"], optional = true }
# Verify a downloaded component blob's bytes against the catalog entry's
# content_digest (sha256) before caching/loading it.
sha2 = { version = "0.10", optional = true }
# Row->Arrow encoder for the ArrowArrayStream sink. Matches the arrow version
# duckdb 1.10504.0 depends on (58.x), so the Arrow C Data Interface ABI passed
# across the DuckDB boundary comes from a single arrow-rs version. `default-features
# = false` drops csv/ipc/json (~1 MB of dead code); only the FFI + array/schema
# glue is needed for the encoder.
arrow = { version = "58", default-features = false, features = ["ffi"] }

# DuckDB C Extension API (loadable-extension build). Pinned to the DuckDB version
# the community-extensions CI builds against (v1.5.4); bumped per release.
duckdb = { version = "1.10504.0", optional = true, default-features = false }
libduckdb-sys = { version = "1.10504.0", features = ["loadable-extension"], optional = true }

[dev-dependencies]
criterion = "0.5"
# For constructing reg::DuckValue chunks in the dispatch benchmark (benches are
# separate compilation units, so the engine's runtime dep must be a dev-dep too).
ducklink-runtime = { path = "runtime" }

# Micro-benchmark of the Direction-2 scalar dispatch hot path (Engine2 only --
# no DuckDB, so it builds with --no-default-features). Run:
#   cargo bench --no-default-features --bench scalar_dispatch
[[bench]]
name = "scalar_dispatch"
harness = false

# End-to-end scalar throughput through a real in-process DuckDB (needs `bundled`).
# Captures the per-chunk marshalling build that scalar_dispatch can't see. Run:
#   cargo bench --no-default-features --features bundled --bench scalar_query
[[bench]]
name = "scalar_query"
harness = false

# Cross-extension parallel scalar dispatch. Two threads dispatching into
# DIFFERENT loaded instances; the delta vs the serial baseline is bucket D's
# per-instance mutex unlock (main's process-wide engine mutex would serialize
# them regardless of core count). Run:
#   cargo bench --no-default-features --bench parallel_scalar
[[bench]]
name = "parallel_scalar"
harness = false

# `duckdb.docs` wasm custom-section overhead. Every Engine2::load calls
# parse_docs_from_wasm on the .wasm bytes; this quantifies the per-load cost
# of that scan for both the "no section present" (steady-state today) and
# "section carries realistic payload" cases. Run:
#   cargo bench --no-default-features --bench docs_section
[[bench]]
name = "docs_section"
harness = false

[profile.release]
lto = true
strip = true

# Standalone repo — detached from any parent workspace.
[workspace]
