[package]
name = "ducklink-runtime"
version = "0.1.0"
edition = "2021"
description = "Reusable wasm-component-loading engine shared by the ducklink host and the native-DuckDB ducklink extension"
license = "MIT"
publish = false

[dependencies]
# The wasm engine. crates.io 45.0.1 so the generated `duckdb:extension`
# bindings are ABI-identical across both directions, and so this matches the
# sqlink host + the webassembly-component-orchestration framework (which is on
# 45.0.1), letting ducklink later reuse the framework's compose:dynlink host.
wasmtime = { version = "46.0.1", features = ["component-model", "cache"] }
# The extension store-state holds a WasiCtx and implements WasiView (components
# target wasip2). Same version as wasmtime.
wasmtime-wasi = "46.0.1"
# The witcanon contract-digest scheme: sha256("witcanon:1" || canonical WIT
# bytes), byte-identical to compose-core::blobs::compute_wit_digest in
# ~/git/webassembly-component-orchestration so digests interoperate. build.rs
# computes the digest at build time; the lib just embeds + serves the const.
hex = "0.4"
# The shared runtime contract-version load guard, lifted from this crate's
# former inline `component_contract_major`/`check_component_contract` so the
# same guard backs both the ducklink and sqlink hosts (datalink is public).
# The witcanon CONTRACT_DIGEST (above) stays per-repo; this is the @MAJOR proxy.
datalink-contract = { git = "https://github.com/tegmentum/datalink.git", rev = "80010adf7c9ec3d07674bba12585c787328217f5" }
# The shared store-generic compose:dynlink/linker host machinery + the
# ResidentBackend (instantiate-once-and-reuse provider lifecycle). ducklink's
# compose_dynlink module is now a thin adapter over this; the resolve/invoke
# bridge + bindings live here, shared with the other wasm-component hosts.
datalink-dynlink = { git = "https://github.com/tegmentum/datalink.git", rev = "80010adf7c9ec3d07674bba12585c787328217f5" }

[build-dependencies]
# Same witcanon scheme, used in build.rs to hash the canonical WIT into a const.
sha2 = "0.10"
hex = "0.4"

[lib]
